--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
         <a class="navbar__brand" href="/">Prompt Bot</a>
         <div class="navbar__actions">
           <% if authenticated? %>
+            <%= link_to 'Profile', edit_profile_path, class: 'navbar__button' %>
             <%= button_to 'Log out', session_path, method: :delete, class: 'navbar__button navbar__button--logout' %>
           <% else %>
             <%= button_to 'Sign in with Discord', '/auth/discord', class: 'navbar__button navbar__button--signin', method: :post, data: { turbo: false } %>
