fix: change name

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,5 @@
 <div class="landing">
-  <h1 class="landing__title">Welcome to the Discord Prompt Bot!</h1>
+  <h1 class="landing__title">Welcome to Roque!</h1>
   <p class="landing__description">
     This bot generates a poetry prompt every day, and DMs it to you. You can reply directly in the private message. Sign in with Discord to see all your responses.
   </p>
