--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar">
       <div class="navbar__container">
-        <a class="navbar__brand" href="/">Prompt Bot</a>
+        <a class="navbar__brand" href="/">Roque</a>
         <div class="navbar__actions">
           <% if authenticated? %>
             <%= link_to 'Responses', responses_path, class: 'navbar__button' %>
